[gd_scene load_steps=6 format=3 uid="uid://dtm7fwy4yiox7"]

[ext_resource type="Script" path="res://gamescene.gd" id="1_mxx6g"]
[ext_resource type="AudioStream" uid="uid://domfpt8h6nrdi" path="res://miaw miaw miaw song sad (lyrics video visual).wav" id="2_8wg1u"]
[ext_resource type="PackedScene" uid="uid://dtx75dqoxfqd8" path="res://pause_menu_layer.tscn" id="3_1em7v"]

[sub_resource type="Gradient" id="Gradient_rk1t7"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.172619, 1)
colors = PackedColorArray(0.413784, 0.760641, 0.662593, 1, 0.42056, 0.778301, 0.951745, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xjc46"]
gradient = SubResource("Gradient_rk1t7")

[node name="GameScene" type="Node2D"]
script = ExtResource("1_mxx6g")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = -1
anchor_right = 28.8
anchor_bottom = 16.2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_xjc46")

[node name="LabelScore" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 71.0
offset_bottom = 33.0
text = "Score: 0"

[node name="LabelTime" type="Label" parent="."]
offset_left = 10.0
offset_top = 30.0
offset_right = 89.0
offset_bottom = 53.0
text = "Temps: 30"

[node name="Timer" type="Timer" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8wg1u")
volume_db = -24.07

[node name="EndMusic" type="AudioStreamPlayer2D" parent="."]

[node name="PauseMenuLayer" parent="." instance=ExtResource("3_1em7v")]

[node name="PauseMenu" parent="PauseMenuLayer" index="0"]
visible = false

[connection signal="pressed" from="PauseMenuLayer/PauseMenu/ButtonContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenuLayer/PauseMenu/ButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenuLayer/PauseMenu/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenuLayer/PauseMenu/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]

[editable path="PauseMenuLayer"]
